--- a/buildspecs.yml
+++ b/buildspecs.yml
@@ -1,34 +1,20 @@
 version: 0.2
-
 phases:
   install:
-    runtime-versions:
-      nodejs: 18
     commands:
-      # - echo Installing frontend dependencies...
-      # - cd application-code/web-tier
-      # - npm install
-      # - cd ../../application-code/app-tier
-      # - echo Installing backend dependencies...
-      # - npm install
-      - echo "Building Web Docker Image..."
-      - cd application-code/web-tier
-      - docker build -t web-img .
-      - cd ../../application-code/app-tier
-      - echo "Building App Docker Image..."
-      - docker build -t app-img .
-      
-
+      - echo "Installing frontend and backend via Docker builds..."
+      - sudo yum install nginx -y
+      - docker build -t frontend-image ./application-code/web-tier
+      - docker build -t backend-image ./application-code/app-tier
   build:
     commands:
-      - echo Building frontend...
-      - cd ../../application-code/web-tier
-      - npm run build
-      - echo Build complete.
-
-# artifacts:
-  # files:
-    # - appspec.yml
-    # - scripts/*
-    # - application-code/web-tier/build//*
-    # - application-code/backend-tier//*
+      - echo "Running Docker containers..."
+      - docker run -d --name frontend-container -p 81:80 frontend-image
+      - docker run -d --name backend-container -p 4000:4000 backend-image
+      - echo "Docker containers started successfully."
+artifacts:
+  files:
+    - appspec.yml
+    - scripts/*
+    - application-code/web-tier/Dockerfile
+    - application-code/app-tier/Dockerfile
