--- a/buildspecs.yml
+++ b/buildspecs.yml
@@ -12,7 +12,31 @@
       - docker run -d --name frontend-container -p 81:80 frontend-image
       - docker run -d --name backend-container -p 4000:4000 backend-image
       - echo "Docker containers started successfully."
-artifacts:
+
+env:
+  variables:
+    AWS_REGION: "ap-south-1"
+    IMAGE1_NAME: "<account_id>.dkr.ecr.us-east-1.amazonaws.com/frontend-image"
+    IMAGE2_NAME: "<account_id>.dkr.ecr.us-east-1.amazonaws.com/backend-image"
+    
+
+phases:
+  pre_build:
+    commands:
+      - echo Logging into Amazon ECR...
+      - aws ecr get-login-password --region $AWS_REGION | docker login --username AWS --password-stdin $IMAGE1_NAME
+      - aws ecr get-login-password --region $AWS_REGION | docker login --username AWS --password-stdin $IMAGE2_NAME
+
+  build:
+    commands:
+      - echo Tagging and pushing image...
+      - docker tag image1:latest $IMAGE1_NAME:latest
+      - docker tag image2:latest $IMAGE2_NAME:latest
+      - docker push $IMAGE1_NAME:latest
+      - docker push $IMAGE2_NAME:latest
+      
+
+
   files:
     - appspec.yml
     - scripts/*
