--- a/buildspecs.yml
+++ b/buildspecs.yml
@@ -1,24 +1,19 @@
- version: 0.2
- phases:
-   install:
-     commands:
-      - echo "Installing frontend and backend via Docker builds..."
-      - sudo yum install nginx -y
-      - docker build -t frontend-image ./application-code/web-tier
-      - docker build -t backend-image ./application-code/app-tier
-  build:
-    commands:
-      - echo "Running Docker containers..."
-      - docker run -d --name frontend-container -p 81:80 frontend-image
-      - docker run -d --name backend-container -p 4000:4000 backend-image
-      - echo "Docker containers started successfully."
+version: 0.2
 
-   env:
-      variables:
+env:
+  variables:
     AWS_REGION: "ap-south-1"
-    IMAGE1_NAME: "<account_id>.dkr.ecr.us-east-1.amazonaws.com/frontend-image"
-    IMAGE2_NAME: "<account_id>.dkr.ecr.us-east-1.amazonaws.com/backend-image"
-    
+    IMAGE1_NAME: "<account_id>.dkr.ecr.ap-south-1.amazonaws.com/frontend-image"
+    IMAGE2_NAME: "<account_id>.dkr.ecr.ap-south-1.amazonaws.com/backend-image"
+
+phases:
+  install:
+    commands:
+      - echo "Installing frontend and backend via Docker builds..."
+      - sudo yum install -y nginx
+      - docker build -t image1 ./application-code/web-tier
+      - docker build -t image2 ./application-code/app-tier
+
   pre_build:
     commands:
       - echo Logging into Amazon ECR...
@@ -27,14 +22,18 @@
 
   build:
     commands:
-      - echo Tagging and pushing image...
+      - echo "Running Docker containers..."
+      - docker run -d --name frontend-container -p 81:80 image1
+      - docker run -d --name backend-container -p 4000:4000 image2
+      - echo Tagging images...
       - docker tag image1:latest $IMAGE1_NAME:latest
       - docker tag image2:latest $IMAGE2_NAME:latest
+      - echo Pushing images...
       - docker push $IMAGE1_NAME:latest
       - docker push $IMAGE2_NAME:latest
-      
+      - echo "Docker containers started and images pushed successfully."
 
-
+artifacts:
   files:
     - appspec.yml
     - scripts/*
