--- a/buildspecs.yml
+++ b/buildspecs.yml
@@ -17,6 +17,10 @@ phases:
   pre_build:
     commands:
       - echo Logging into Amazon ECR...
+      - ecr:GetAuthorizationToken
+      - ecr:BatchCheckLayerAvailability
+      - ecr:GetAuthorizationToken
+      - aws ecr get-login-password --region ap-south-1 | docker login --username AWS --password-stdin2 49133131200.dkr.ecr.ap-south-1.amazonaws.com
       - aws ecr get-login-password --region $AWS_REGION | docker login --username AWS --password-stdin $IMAGE1_NAME
       - aws ecr get-login-password --region $AWS_REGION | docker login --username AWS --password-stdin $IMAGE2_NAME
 
