--- a/buildspecs.yml
+++ b/buildspecs.yml
@@ -1,21 +1,17 @@
 version: 0.2
-
 phases:
   install:
     commands:
       - echo "Installing frontend and backend via Docker builds..."
-      - sudo yum install -y nginx
-      - docker build -t frontend ./application-code/web-tier
-      - docker build -t backend ./application-code/app-tier
-
+      - sudo yum install nginx -y
+      - docker build -t frontend-image ./application-code/web-tier
+      - docker build -t backend-image ./application-code/app-tier
   build:
     commands:
       - echo "Running Docker containers..."
-      - docker run -d --name frontend-container -p 81:80 frontend
-      - docker run -d --name backend-container -p 4000:4000 backend
+      - docker run -d --name frontend-container -p 81:80 frontend-image
+      - docker run -d --name backend-container -p 4000:4000 backend-image
       - echo "Docker containers started successfully."
-      
-
 artifacts:
   files:
     - appspec.yml
